--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>FS-App-Template</title>
     <link rel="stylesheet" href="/style.css" />
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
