added brush size and color selection

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>FS-App-Template</title>
+    <title>Draw Your Face Off</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"></script>
     <script defer src="/bundle.js"></script>
