added font awesome icons

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://kit.fontawesome.com/8b9f1618c9.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"
     ></script>
